	*java/mwdumper.jar and java/mysql-connector.jar: Added java files that aid in importing the database.

	*ImportDatabase.php: Added new file to import database. File needs to be changed to dump existing SQL info before importing.

	Added feature where scripts locks database when importing.

	*WikiBackup_body.php (WikiBackup.import): Added $wgReadOnlyFile parameter to import script file. Also added message parameter.
	*ImportDatabase.php: Added code to lock database with message passed by main script.
	*WikiBackup.i18n.php: Added message for when database is locked.

	*ImportDatabase.php: Added code to truncate revision, page, and text tables for successful import.

2008-07-09 Tyler Romeo

	Enhanced function commenting to work with Javadoc.

	*WikiBackup.php: Added comments according to Javadoc documentation.

	Added logging when creating backups.

	*WikiBackup.php: Added log types to global array of log types and set message names.
	*WikiBackup_body.php (WikiBackup.execute): Added creation of log entry to function.
	*WikiBackup_body.php (WikiBackup.delete): Added creation of log entry to function.
	*WikiBackup.i18n.php: Added messages for log entries and headers as defined in WikiBackup.php.

2008-07-07 Tyler Romeo

	*WikiBackup.php: Added more comments.

	Changed hook so user is notified when backup completes, not at login.

	*WikiBackup.php (53): Changed hook from "UserLoginComplete" to "ArticleViewHeader"
	*WikiBackup.php (83): Changed function to adapt to new hook.

	Fixed parser function so URL to backup download is correct.

	*WikiBackup.php (BackupParserRender): Added global variables $wgServer and $wgScriptPath to URL.

	Fixed parser function so displaytext defaults to URL instead of blank, which would just generate a number.

	*WikiBackup.php (BackupParserRender): Changed if statement to check if displaytext is blank, and set it to the URL if blank.